Replace rzp with Razorpay
* Fix rzp
* Fix complex statements

--- a/app/design/frontend/base/default/template/razorpay/placeorder.phtml
+++ b/app/design/frontend/base/default/template/razorpay/placeorder.phtml
@@ -2,7 +2,7 @@
     var defaultPlaceOrderButton = $$('button[type=submit][class~="btn-checkout"]')[0];
     defaultPlaceOrderButton.setAttribute('onclick', '');
 
-    var paymentIdField = 'rzp_payment_id';
+    var paymentIdField = 'razorpay_payment_id';
 
     var onSuccess = function(data) {
         $(paymentIdField).value = data.razorpay_payment_id;
