--- a/app/design/frontend/base/default/layout/razorpay.xml
+++ b/app/design/frontend/base/default/layout/razorpay.xml
@@ -29,4 +29,29 @@
             <block type="core/template" name="razorpay_payments_order" template="razorpay/order.phtml" output="toHtml"/>
         </reference>
     </checkout_onepage_paymentmethod>
+    <!-- Compatibility with Iwd_Opc extension start-->
+    <opc_index_index>
+        <reference name="head">
+            <block type="core/text" name="razorpay.checkout">
+                <action method="setText">
+                    <text>
+                       <![CDATA[<script type="text/javascript" src="https://checkout.razorpay.com/v1/checkout.js"></script>]]>
+                    </text>
+                </action>
+            </block>
+            <action method="addJs"><file>razorpay/razorpay-utils.js</file></action>
+        </reference>
+        <reference name="before_body_end">
+            <block type="razorpay_payments/setuputils" name="razorpay_payments_setuputils" template="razorpay/setuputils.phtml" />
+        </reference>
+        <reference name="before_body_end">
+            <block type="core/template" name="razorpay_placeorder_iwd_opc" template="razorpay/extensions/iwd_opc/payments.phtml">
+                <action method="setData">
+                    <key>form_id</key>
+                    <value>co-payment-form</value>
+                </action>
+            </block>
+        </reference>
+    </opc_index_index>
+    <!-- Compatibility with Iwd_Opc extension end-->
 </layout>
