Fix bug where razorpay utils were included even if it was disabled

--- a/app/design/frontend/base/default/template/razorpay/placeorder.phtml
+++ b/app/design/frontend/base/default/template/razorpay/placeorder.phtml
@@ -1,3 +1,4 @@
+<?php if (Mage::helper('razorpay_payments')->isRazorpayEnabled()) : ?>
 <script type="text/javascript">
     var defaultPlaceOrderButton = $$('button[type=submit][class~="btn-checkout"]')[0];
     defaultPlaceOrderButton.setAttribute('onclick', '');
@@ -29,3 +30,4 @@
 
     Event.observe(defaultPlaceOrderButton, 'click', placeOrder);
 </script>
+<?php endif; ?>
