[razorpay sdk] Setting window.location = failure url when api calls result in exceptions and using api calls instead of sendRequest

--- a/app/design/frontend/base/default/template/razorpay/checkout.phtml
+++ b/app/design/frontend/base/default/template/razorpay/checkout.phtml
@@ -15,7 +15,14 @@
         $('razorpay').submit();
     };
 
-    razorpayUtils.placeOrder(onSuccess, onDismiss);
+    if (razorpayOptions.hasOwnProperty('error') === false && razorpayOptions.error !== false)
+    {
+        razorpayUtils.placeOrder(onSuccess, onDismiss);
+    }
+    else
+    {
+        window.location = "<?php echo $this->getFailureUrl(); ?>";
+    }
 </script>
 
 <form name="razorpay" id="razorpay" method="post" action="<?php echo $this->getSuccessUrl(); ?>">
