--- a/view/frontend/web/template/razorpay/logo.phtml
+++ b/view/frontend/web/template/razorpay/logo.phtml
@@ -1,1 +1,1 @@
-
+<img src="<?php echo Mage::getBaseUrl(Mage_Core_Model_Store::URL_TYPE_MEDIA); ?>razorpay/logo.svg" alt="<?php echo $this->__('Razorpay'); ?>" />
