--- a/view/frontend/layout/razorpay.xml
+++ b/view/frontend/layout/razorpay.xml
@@ -3,7 +3,7 @@
 <layout version="0.1.0">
     <checkout_onepage_index>
         <reference name="checkout.payment.methods">
-            <block type="core/template" name="payment.method.rzp" template="razorpay/logo.phtml" />
+            <block type="core/template" name="payment.method.razorpay" template="razorpay/logo.phtml" />
         </reference>
     </checkout_onepage_index>
 </layout>
