--- a/view/frontend/web/template/payment/razorpay-form.html
+++ b/view/frontend/web/template/payment/razorpay-form.html
@@ -1,11 +1,11 @@
 <div class="payment-method" data-bind="css: {'_active': (getCode() == isChecked())}">
     <div class="payment-method-title field choice">
+        <img data-bind="attr: {src: 'https://avatars0.githubusercontent.com/u/7713209?s=200&v=4', alt: $t('Acceptance Mark')}" class="payment-icon"/>
         <input type="radio"
                name="payment[method]"
                class="radio"
                data-bind="attr: {'id': getCode()}, value: getCode(), checked: isChecked, click: selectPaymentMethod, visible: isRadioButtonVisible()"/>
         <label data-bind="attr: {'for': getCode()}" class="label"><span data-bind="text: getTitle()"></span></label>
-        <img data-bind="attr: {src: 'https://razorpay.com/assets/razorpay-logo-95e9447029.svg', alt: $t('Acceptance Mark')}" class="payment-icon"/>
     </div>
     
     <div class="payment-method-content">
