--- a/view/frontend/web/template/payment/razorpay-form.html
+++ b/view/frontend/web/template/payment/razorpay-form.html
@@ -4,7 +4,7 @@
                name="payment[method]"
                class="radio"
                data-bind="attr: {'id': getCode()}, value: getCode(), checked: isChecked, click: selectPaymentMethod, visible: isRadioButtonVisible()"/>
-        <img data-bind="attr: {src:'https://avatars0.githubusercontent.com/u/7713209?s=50&v=4', alt: $t('Acceptance Mark')}" class="payment-icon"/>
+        <img data-bind="attr: {src:'logo.png', alt: $t('Acceptance Mark')}" class="payment-icon"/>
         <label data-bind="attr: {'for': getCode()}" class="label"><span data-bind="text: getTitle()"></span></label>
     </div>
     
