--- a/view/frontend/web/template/payment/razorpay-form.html
+++ b/view/frontend/web/template/payment/razorpay-form.html
@@ -4,7 +4,7 @@
                name="payment[method]"
                class="radio"
                data-bind="attr: {'id': getCode()}, value: getCode(), checked: isChecked, click: selectPaymentMethod, visible: isRadioButtonVisible()"/>
-        <img data-bind="attr: {src:'<?php echo Mage::getBaseUrl(Mage_Core_Model_Store::URL_TYPE_MEDIA); ?>razorpay/logo.png', alt: $t('logo.png')}" class="payment-icon"/>
+        <img data-bind="attr: {src:'<?php echo Mage::getBaseUrl(Mage_Core_Model_Store::URL_TYPE_MEDIA); ?>payment/logo.png', alt: $t('Logo.png')}" class="payment-icon"/>
         <label data-bind="attr: {'for': getCode()}" class="label"><span data-bind="text: getTitle()"></span></label>
     </div>
     
