--- a/view/frontend/web/template/payment/razorpay-form.phtml
+++ b/view/frontend/web/template/payment/razorpay-form.phtml
@@ -4,7 +4,7 @@
                name="payment[method]"
                class="radio"
                data-bind="attr: {'id': getCode()}, value: getCode(), checked: isChecked, click: selectPaymentMethod, visible: isRadioButtonVisible()"/>
-        <img data-bind="attr: {src:'<?php echo $this->getViewFileUrl("payment/logo.png"); ?>', alt: $t('Logo')}" class="payment-icon"/>
+        <img data-bind="attr: {src:'<?php echo $this->getViewFileUrl(payment/logo.png); ?>', alt: $t('Logo')}" class="payment-icon"/>
         <label data-bind="attr: {'for': getCode()}" class="label"><span data-bind="text: getTitle()"></span></label>
     </div>
     
