--- a/view/frontend/web/template/payment/razorpay-form.html
+++ b/view/frontend/web/template/payment/razorpay-form.html
@@ -4,7 +4,7 @@
                name="payment[method]"
                class="radio"
                data-bind="attr: {'id': getCode()}, value: getCode(), checked: isChecked, click: selectPaymentMethod, visible: isRadioButtonVisible()"/>
-<!--         <img src="pub/static/frontend/Magento/luma/en_US/Razorpay_Magento/template/payment/logo.png" alt="Razorpay Logo" class="payment-icon" /> -->
+        <img data-bind="attr: {src:'https://avatars0.githubusercontent.com/u/7713209?s=30&amp;v=4', alt: $t('Razorpay')}" class="payment-icon" src="https://avatars0.githubusercontent.com/u/7713209?s=30&amp;v=5" alt="Acceptance Mark">
         <label data-bind="attr: {'for': getCode()}" class="label"><span data-bind="text: getTitle()"></span></label>
     </div>
     
