--- a/view/adminhtml/layout/sales_transactions_grid_block.xml
+++ b/view/adminhtml/layout/sales_transactions_grid_block.xml
@@ -10,14 +10,13 @@
         <referenceBlock class="Magento\Backend\Block\Widget\Grid\ColumnSet" as="grid.columnSet" name="sales.transactions.grid.columnSet">
             <block class="Magento\Backend\Block\Widget\Grid\Column" name="verify_txn" as="verify_txn">
                 <arguments>
-                        <argument name="id" xsi:type="string">action</argument>
                         <argument name="header" xsi:type="string" translate="true">Verify Transaction</argument>
                         <argument name="type" xsi:type="string">action</argument>
-                        <argument name="getter" xsi:type="string">getId</argument>
                         <argument name="filter" xsi:type="boolean">false</argument>
                         <argument name="sortable" xsi:type="boolean">false</argument>
                         <argument name="index" xsi:type="string">entity_id</argument>
                         <argument name="is_system" xsi:type="boolean">true</argument>
+                        <argument name="renderer" xsi:type="string">Razorpay\Magento\Block\Adminhtml\Grid\Column\Renderer\Assignaction</argument>
                         <argument name="header_css_class" xsi:type="string">col-actions</argument>
                         <argument name="column_css_class" xsi:type="string">col-actions</argument>
                     </arguments>
