--- a/view/adminhtml/layout/sales_transactions_grid_block.xml
+++ b/view/adminhtml/layout/sales_transactions_grid_block.xml
@@ -14,7 +14,7 @@
                         <argument name="type" xsi:type="string">action</argument>
                         <argument name="filter" xsi:type="boolean">false</argument>
                         <argument name="sortable" xsi:type="boolean">false</argument>
-                        <argument name="index" xsi:type="string">entity_id</argument>
+                        <argument name="index" xsi:type="string">transaction_id</argument>
                         <argument name="is_system" xsi:type="boolean">true</argument>
                         <argument name="renderer" xsi:type="string">Razorpay\Magento\Ui\Component\Listing\Columns\Verify</argument>
                         <argument name="header_css_class" xsi:type="string">col-actions</argument>
