--- a/view/adminhtml/layout/sales_transactions_grid_block.xml
+++ b/view/adminhtml/layout/sales_transactions_grid_block.xml
@@ -16,7 +16,7 @@
                         <argument name="sortable" xsi:type="boolean">false</argument>
                         <argument name="index" xsi:type="string">transaction_id</argument>
                         <argument name="is_system" xsi:type="boolean">true</argument>
-                        <argument name="renderer" xsi:type="string">Razorpay\Magento\Ui\Component\Listing\Columns\Verify</argument>
+                        <argument name="renderer" xsi:type="string">Razorpay\Magento\Block\Adminhtml\Grid\Column\Renderer\Assignaction</argument>
                         <argument name="header_css_class" xsi:type="string">col-actions</argument>
                         <argument name="column_css_class" xsi:type="string">col-actions</argument>
                     </arguments>
