--- a/view/base/web/templates/grid/cells/sales/verify.html
+++ b/view/base/web/templates/grid/cells/sales/verify.html
@@ -2,7 +2,7 @@
     <div class="modal-body">
         <div class="bootbox-body">
             <textarea class="bootbox-input bootbox-input-text form-control required-entry" name="send_message" rows="4" cols="83"></textarea>
-            <input type="hidden" name="entity_id" value="<%- customerid %>">         
+            <input type="hidden" name="transaction_id" value="<%- customerid %>">         
         </div>
     </div>
     <div class="modal-footer">
