--- a/view/frontend/templates/product/buynow.phtml
+++ b/view/frontend/templates/product/buynow.phtml
@@ -17,8 +17,8 @@
 <script type="text/javascript">
     var Razorpay = {
       "config": {
-        "api": "https://api-web-magemo.ext.dev.razorpay.in/",
-       "frame": "https://api-web-magemo.ext.dev.razorpay.in/test/checkout.html?branch=master",
+        "api": "https://api-web-magefr.ext.dev.razorpay.in/",
+       "frame": "https://api-web-magefr.ext.dev.razorpay.in/test/checkout.html?branch=master",
       },
     }; 
 
