--- a/view/frontend/templates/product/buynow.phtml
+++ b/view/frontend/templates/product/buynow.phtml
@@ -1,6 +1,27 @@
 <?php
 /** @var \Magento\Catalog\Block\Product\View $block */
+use Magento\Framework\App\Config\ScopeConfigInterface;
+
+function getObjectManager()
+{
+    return \Magento\Framework\App\ObjectManager::getInstance();
+}
+
+$objectManager = getObjectManager();
+
+// Get the store manager
+$storeManager = $objectManager->get(\Magento\Store\Model\StoreManagerInterface::class);
+$scopeConfig = $objectManager->get(ScopeConfigInterface::class);
+
+$code = 'razorpay';
+$magicActiveField = 'activate_magic';
+$buynowActiveField = 'activate_magic_buy_now';
+
+$isMagicEnabled = $scopeConfig->getValue('payment/' . $code . '/' . $magicActiveField, \Magento\Store\Model\ScopeInterface::SCOPE_STORE);
+$isBuynowEnabled = $scopeConfig->getValue('payment/' . $code . '/' . $buynowActiveField, \Magento\Store\Model\ScopeInterface::SCOPE_STORE);
+
 ?>
+<?php if ($isMagicEnabled == 1 && $isBuynowEnabled == 1) :?>
 <script type="text/x-magento-init">
     {
         "#product_addtocart_form": {
@@ -17,8 +38,8 @@
 <script type="text/javascript">
     var Razorpay = {
       "config": {
-        "api": "https://api-web-magefr.ext.dev.razorpay.in/",
-       "frame": "https://api-web-magefr.ext.dev.razorpay.in/test/checkout.html?branch=master",
+        "api": "https://api-web-magemo.ext.dev.razorpay.in/",
+       "frame": "https://api-web-magemo.ext.dev.razorpay.in/test/checkout.html?branch=master",
       },
     }; 
 
@@ -34,3 +55,6 @@
 <script type="text/javascript"
     src="https://checkout.razorpay.com/v1/magic-checkout.js">
 </script>
+
+<?php endif; ?>
+
