Updated the devstack label

--- a/view/frontend/templates/oneclick/magiccart.phtml
+++ b/view/frontend/templates/oneclick/magiccart.phtml
@@ -64,8 +64,8 @@ $cartDataCount = count( $cartData );
 
         var Razorpay = {
           "config": {
-            "api": "https://api-web-magemo.ext.dev.razorpay.in/",
-           "frame": "https://api-web-magemo.ext.dev.razorpay.in/test/checkout.html?branch=master",
+            "api": "https://api-web-magefr.ext.dev.razorpay.in/",
+           "frame": "https://api-web-magefr.ext.dev.razorpay.in/test/checkout.html?branch=master",
           },
         }; 
 
