--- a/view/frontend/templates/oneclick/buynow.phtml
+++ b/view/frontend/templates/oneclick/buynow.phtml
@@ -47,8 +47,8 @@
 </script>
 
 <script id="occ-template" type="text/x-occ-template">
-    <button type="button" title="<?php echo __('One Click Checkout') ?>" class="action primary tocart occ" id="product-oneclick-button">
-        <span><?php echo __('One Click Checkout') ?></span>
+    <button type="button" title="<?php echo __('Magic Checkout') ?>" class="action primary tocart occ" id="product-oneclick-button">
+        <span><?php echo __('Magic Checkout') ?></span>
     </button>
 </script>
 
