--- a/view/frontend/templates/oneclick/magiccart.phtml
+++ b/view/frontend/templates/oneclick/magiccart.phtml
@@ -35,7 +35,7 @@ $cartDataCount = count( $cartData );
  
             data-role="proceed-to-checkout"
  
-            title="<?= $block->escapeHtmlAttr(__('Proceed to Checkout Top')) ?>"
+            title="<?= $block->escapeHtmlAttr(__('Magic Checkout')) ?>"
  
             data-mage-init='{
  
@@ -57,7 +57,7 @@ $cartDataCount = count( $cartData );
  
             <?php endif; ?>>
  
-        <span><?= $block->escapeHtml(__('Proceed to Checkout Top')) ?></span>
+        <span><?= $block->escapeHtml(__('Magic Checkout')) ?></span>
  
     </button>
     </div>
