--- a/view/frontend/layout/checkout_cart_index.xml
+++ b/view/frontend/layout/checkout_cart_index.xml
@@ -6,7 +6,7 @@
     </head>
     <body>
         <referenceContainer name="checkout.cart.totals.container">
-            <block class="Magento\Checkout\Block\Onepage\Link" name="checkout.cart.methods.onepage.top" template="Razorpay_Magento::onepage/magiccart.phtml" after="checkout.cart.totals" />
+            <block class="Magento\Checkout\Block\Onepage\Link" name="checkout.cart.methods.onepage.top" template="Razorpay_Magento::oneclick/magiccart.phtml" after="checkout.cart.totals" />
         </referenceContainer>
     </body>
 </page>
