--- a/view/frontend/templates/oneclick/magiccart.phtml
+++ b/view/frontend/templates/oneclick/magiccart.phtml
@@ -47,7 +47,7 @@ $cartDataCount = count( $cartData );
  
             }'
  
-            class="action primary checkout<?= ($block->isDisabled()) ? ' disabled' : '' ?>"
+            class="action primary<?= ($block->isDisabled()) ? ' disabled' : '' ?>"
  
             <?php if ($block->isDisabled()) :?>
  
