--- a/view/frontend/layout/checkout_cart_index.xml
+++ b/view/frontend/layout/checkout_cart_index.xml
@@ -8,5 +8,6 @@
         <referenceContainer name="checkout.cart.totals.container">
             <block class="Magento\Checkout\Block\Onepage\Link" name="checkout.cart.methods.onepage.top" template="Razorpay_Magento::oneclick/magiccart.phtml" after="checkout.cart.totals" />
         </referenceContainer>
+        <referenceBlock name="checkout.cart.coupon" remove="true" />
     </body>
 </page>
