--- a/view/frontend/layout/catalog_product_view.xml
+++ b/view/frontend/layout/catalog_product_view.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0"?>
 <page layout="1column" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
+    <head>
+        <!-- Add CSS file -->
+        <css src="Razorpay_Magento/css/magic.css" />
+    </head>
     <body>
         <referenceContainer name="alert.urls">
             <block class="Magento\Catalog\Block\Product\View" name="oneclick.buynow" template="Razorpay_Magento::oneclick/buynow.phtml" before="-" />
