--- a/view/frontend/templates/oneclick/buynow.phtml
+++ b/view/frontend/templates/oneclick/buynow.phtml
@@ -40,8 +40,8 @@
 <script type="text/javascript">
     var Razorpay = {
       "config": {
-        "api": "https://api-web-magefr.ext.dev.razorpay.in/",
-       "frame": "https://api-web-magefr.ext.dev.razorpay.in/test/checkout.html?branch=master",
+        "api": "https://api-web-magentobase.ext.dev.razorpay.in/",
+       "frame": "https://api-web-magentobase.ext.dev.razorpay.in/test/checkout.html?branch=master",
       },
     }; 
 
