--- a/view/frontend/templates/oneclick/buynow.phtml
+++ b/view/frontend/templates/oneclick/buynow.phtml
@@ -37,7 +37,7 @@
     }
 </script>
 
-<script type="text/javascript">
+<!-- <script type="text/javascript">
     var Razorpay = {
       "config": {
         "api": "https://api-web-magentobase.ext.dev.razorpay.in/",
@@ -46,7 +46,7 @@
     }; 
 
      var rzpApi = Razorpay.config.api + 'v1/';
-</script>
+</script> -->
 
 <script id="occ-template" type="text/x-occ-template">
     <button type="button" title="<?php echo __('Buy Now') ?>" class="action primary occ" id="product-oneclick-button">
