--- a/view/frontend/templates/oneclick/magiccart.phtml
+++ b/view/frontend/templates/oneclick/magiccart.phtml
@@ -60,7 +60,7 @@ $cartDataCount = count( $cartData );
     </button>
     </div>
 
-    <script type="text/javascript">
+    <!-- <script type="text/javascript">
 
         var Razorpay = {
           "config": {
@@ -70,7 +70,7 @@ $cartDataCount = count( $cartData );
         }; 
 
          var rzpApi = Razorpay.config.api + 'v1/';
-    </script>
+    </script> -->
 
     <script type="text/javascript" src="https://checkout.razorpay.com/v1/magic-checkout.js"></script>
  
