--- a/view/frontend/templates/oneclick/minicart.phtml
+++ b/view/frontend/templates/oneclick/minicart.phtml
@@ -28,10 +28,10 @@
 </script> -->
 
 <!-- app/code/Vendor/Module/view/frontend/templates/custom_button.phtml -->
-<button onclick="customButtonClick()">Custom Button</button>
+<!-- <button onclick="customButtonClick()">Custom Button</button>
 <script>
     function customButtonClick() {
         // Your custom button logic here
         alert('Button Clicked!');
     }
-</script>
+</script> -->
