--- a/view/frontend/layout/checkout_cart_sidebar_configure.xml
+++ b/view/frontend/layout/checkout_cart_sidebar_configure.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0"?>
+<!-- <?xml version="1.0"?>
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <body>
         <referenceBlock name="minicart">
@@ -7,7 +7,7 @@
             </action>
         </referenceBlock>
     </body>
-</page>
+</page> -->
 
 <!-- <?xml version="1.0"?>
 <page layout="1column" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
